# google-maps-mcp-server

./: .actionlint.yaml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  GETTING_STARTED.md  Makefile  QUICKSTART.md  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  docker.yml  publish.yml
docker/: Dockerfile  docker-compose.yml
docs/: API.md  CONTRIBUTING.md
examples/: README.md  adk_agent.py  flask_routing.py  gps_trace_analyzer.py  mcp_client_test.py  simple_query.py
k8s/: deployment.yaml
scripts/: run_tests.sh  setup_dev.sh  verify_deployment.py
src/google_maps_mcp_server/: __init__.py  api.py  config.py  server.py
src/google_maps_mcp_server/tools/: __init__.py  base.py  directions.py  distance.py  elevation.py  geocoding.py  places.py  roads.py  safety.py  traffic.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_server.py
tests/unit/: __init__.py  test_base_tool.py  test_config.py  test_directions.py  test_distance.py  test_elevation.py  test_geocoding.py  test_place_details.py  test_places.py  test_roads.py  test_safety.py  test_traffic.py
