[project]
name = "google-maps-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Etty Sekhon", email = "etty.sekhon@gmail.com" }
]
requires-python = ">=3.14.0"
dependencies = []

[project.scripts]
google-maps-mcp-server = "google_maps_mcp_server:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
